# mpress

./: .prettierrc  README.md  bun.lockb  components.json  eslint.config.js  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/dummy/: data.enc
src-tauri/icons/: icon.icns
src-tauri/src/: constants.rs  decrypt.rs  encrypt.rs  main.rs  utils.rs
src/components/: ask-from-memory.tsx  ask-long-press.tsx  ask-path.tsx  splash.tsx
src/components/auth/: AuthFailure.tsx  FromMemory.tsx  LongPress.tsx
src/components/layout/: AppContainer.tsx
src/components/settings/: FromMemoryOptions.tsx  LongPressOptions.tsx
src/components/summary/: ConfirmButton.tsx  SummaryContainer.tsx  SummaryPaths.tsx
src/components/ui/: ConfirmDialog.tsx  basic-file-upload.tsx  button.tsx
src/constants/: index.ts
src/hooks/: app-state.ts  use-config.tsx  use-crypto.tsx
src/lib/: crypto.ts  utils.ts
src/pages/: Auth.tsx  Confirm.tsx  Home.tsx  Settings.tsx  Success.tsx
src/routes/: index.tsx
src/store/: index.ts
src/types/: index.ts
