[package]
name = "mpress"
version = "0.1.0"
description = "Multi-Stage Encrypt/Decrypt Tool"
authors = ["hbauer"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
    "fs-read-file",
    "fs-write-file",
    "fs-exists",
    "dialog-save",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10.1"
rand = "0.8.5"
base64 = "0.21.0"
anyhow = "1.0"
pbkdf2 = "0.12"
sha2 = "0.10"
once_cell = "1.19.0"
showfile = "0.1.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
